--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -113,6 +113,9 @@
     float: right;
     position: relative;
     height: 44px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
 }
 
 #backButton{
@@ -186,12 +189,32 @@ td.button{
 table{
     width: 100%;
     background-color: whitesmoke;
-    padding: 5px;
     border: 2px solid black;
-    border-radius: 7px;
     margin-bottom: 30px;
+}
+
+.tableHeaderRow{
+    background-color: floralwhite;
 }
 
 body{
     margin:0px;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(230, 230, 230);
+    min-width: 160px;
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
