--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -54,7 +54,7 @@
 
 .altVarNameLabel{
     display: inline-block;
-    width: 150px;
+    width: 600px;
     margin: 2px 10px;
     padding: 2px 0px;
     font-family: Arial, Helvetica, sans-serif;
@@ -62,10 +62,14 @@
 
 .altPropertyRow{
     display: inline-block;
-    width: 150px;
+    width: 600px;
     margin: 2px 10px;
     padding: 2px 0px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#registerKilometersForm{
+	background-color: rgb(230, 230, 230);
 }
 
 .availableInput{
